# nivra-court

./: Cargo.toml  README.md
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  main.rs  models.rs  notifications.rs  traits.rs
crates/indexer/src/handlers/: admin_vote_finalized_handler.rs  admin_vote_handler.rs  balance_event_handler.rs  court_created_handler.rs  court_economics_changed_handler.rs  court_metadata_changed_handler.rs  court_operation_changed_handler.rs  court_timetable_changed_handler.rs  dispute_created_handler.rs  dispute_event_handler.rs  dispute_payment_handler.rs  evidence_created_handler.rs  evidence_modified_handler.rs  evidence_removed_handler.rs  mod.rs  nivster_selection_handler.rs  worker_pool_event_handler.rs
crates/schema/: Cargo.toml
crates/schema/migrations/2026-03-30-053033-0000_registry_events/: down.sql  up.sql
crates/schema/migrations/2026-03-30-104820-0000_court/: down.sql  up.sql
crates/schema/migrations/2026-03-30-140651-0000_nivster/: down.sql  up.sql
crates/schema/migrations/2026-03-30-141157-0000_dispute/: down.sql  up.sql
crates/schema/migrations/2026-03-30-171420-0000_balance_events/: down.sql  up.sql
crates/schema/migrations/2026-03-30-180244-0000_evidence/: down.sql  up.sql
crates/schema/migrations/2026-04-05-164616-0000_notifications/: down.sql  up.sql
crates/schema/migrations/2026-04-09-093512-0000_party_stats/: down.sql  up.sql
crates/schema/src/: constants.rs  lib.rs  models.rs  schema.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  models.rs
examples/marketplace/: Move.toml  Published.toml
examples/marketplace/sources/: listing.move  marketplace.move
examples/marketplace/tests/: marketplace_tests.move
smart_contracts/nivra_court/: Move.toml
smart_contracts/nivra_court/sources/: nivra_court.move
smart_contracts/nivra_court/tests/: nivra_court_tests.move
