[package]
name = "nivra-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
futures = "0.3.32"
url = "2.5.4"
nivra-schema = { path = "../schema" }
clap = { workspace = true, features = ["env", "derive"] }
diesel = { workspace = true, features = ["postgres", "chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true

[[bin]]
name = "nivra-server"
path = "src/main.rs"